use hardcoded year instead of theme {year}
{year} only resolved in html render not in the rss xml file
using hardcoded year instead

--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ theme = "hugo-theme-codex"
 title = "Hello, World."
 languageCode = "en-us"
 baseURL = "https://cyberthink777.github.io/"
-copyright = "© {year} Alexander Matthew"
+copyright = "© 2022 Alexander Matthew"
 
 [params]
   # Following Go formatting
