add blog _index to supply metadata & rename to WEBlog

--- a/config.toml
+++ b/config.toml
@@ -46,5 +46,5 @@ copyright = "© 2022 Alexander Matthew"
 
 [[menu.main]]
   identifier = "blog"
-  name = "web-log"
+  name = "WEB-log"
   url = "/blog"
